# codec-python

./: .gitignore  Readme.md  codec2.py  codec3.py  codecolater.py  main.py  pyproject.toml  requirments.txt
codex/: container.py  controller.py  dtos.py  failure.py  file_reader.py  repositories.py  result.py  services.py  tui.py
tests/: test_repository_local_finder.py  test_summary_service.py
